--- a/html/signin_email.html
+++ b/html/signin_email.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Provision</title>
+    <title>Sign in</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
-
 <body>
-    <div class="provision_page page">
+    <div class="register_page page">
         <div class="page__menu flexrow">
             <div class="page__menu--logo">
                 <img src="../img/logo.png" alt="">
@@ -40,10 +38,46 @@
         </div>
 
         <div class="page__content">
-            <div class="page__content--content">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis soluta nam impedit vero laudantium consectetur facere facilis id eius sapiente, nulla repellendus quasi adipisci minus necessitatibus eos vitae ex cupiditate?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, nemo voluptates soluta tempora at hic aut maiores omnis tempore quis voluptas! Veritatis suscipit ad saepe necessitatibus corrupti magni eos magnam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut amet eligendi quidem dolorem facilis aspernatur, mollitia cum suscipit repellat quasi quaerat explicabo repudiandae? Atque vitae doloremque autem consequatur voluptate voluptates.</p>
+            <div class="form__option">
+                <ul>
+                    <div><li><a href="">Email</a></li></div>
+                    <div><li><a href="/html/signin_phone.html">Di động</a></li></div>
+                </ul>
+                <h3>Đăng nhập với EIV</h3>
+                <form action="#">
+                    <div class="form_row">
+                        <label class="form__label" for="email">Email</label>
+                        <input class="form__input" type="text"
+                    id="email" placeholder="Email">
+                    </div>
+                    <div class="form_row">
+                        <label class="form__label" for="pass">Mật khẩu</label>
+                        <input class="form__input" type="text"
+                    id="pass" placeholder="Mật khẩu">
+                    </div>
+                    <div class="form_row other">
+                        <div><p><a href="">Tạo tài khoản mới</a></p></div>
+                        <div><p><a href="">Quên mật khẩu?</a></p></div>
+                    </div>
+                    <div class="form_row verify">
+                        <input class="form__button" type="submit" name="submit" value="Đăng nhập"> 
+                    </div>
+                    <p>hoặc tiếp tục với</p>
+                    <div class="link__other">
+                        <div class="GG__link">
+                            <a href="">
+                                <img src="/img/Detail/GGLogo.png" alt="">
+                                <p>Google</p> 
+                            </a>
+                        </div>
+                        <div class="FB__link">
+                            <a href="">
+                                <img src="/img/Detail/FBLogo.png" alt="">
+                                <p>Facebook</p>
+                            </a>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
 
